--- a/app/src/main/res/layout/fragment_flower.xml
+++ b/app/src/main/res/layout/fragment_flower.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
             name="viewModel"
-            type="sheridan.jaca.assignment3.overview.OverviewViewModel" />
+            type="sheridan.jaca.assignment3.overview.FlowerViewModel" />
     </data>
 
     <FrameLayout
@@ -16,7 +17,10 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/flowerList"
             android:layout_height="match_parent"
-            android:layout_width="match_parent"/>
+            android:layout_width="match_parent"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:listData="@{viewModel.flowers}"
+            tools:listitem="@layout/recycler_view_item"/>
 
     </FrameLayout>
 </layout>
