--- a/app/src/main/res/layout/fragment_flower.xml
+++ b/app/src/main/res/layout/fragment_flower.xml
@@ -18,8 +18,7 @@
             android:id="@+id/flowerList"
             android:layout_height="match_parent"
             android:layout_width="match_parent"
-            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
-            app:listData="@{viewModel.flowers}"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             tools:listitem="@layout/recycler_view_item"/>
 
     </FrameLayout>
