overview and details pages now work

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -8,5 +8,20 @@
         android:id="@+id/overviewFragment"
         android:name="sheridan.jaca.assignment3.overview.OverviewFragment"
         android:label="fragment_overview"
-        tools:layout="@layout/fragment_flower" />
+        tools:layout="@layout/fragment_flower" >
+        <action
+            android:id="@+id/action_overview_to_detail"
+            app:destination="@id/detailFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/detailFragment"
+        android:name="sheridan.jaca.assignment3.detail.DetailFragment"
+        android:label="DetailFragment" >
+        <action
+            android:id="@+id/action_detail_to_overview"
+            app:destination="@id/overviewFragment" />
+        <argument
+            android:name="flowerData"
+            app:argType="sheridan.jaca.assignment3.domain.Flower" />
+    </fragment>
 </navigation>
